--- a/src/app/core/components/tarjeta-producto/tarjeta-producto.component.scss
+++ b/src/app/core/components/tarjeta-producto/tarjeta-producto.component.scss
@@ -29,8 +29,12 @@
     font-size: small;
 }
 
-h4{
+h3{
     font-weight: bold;  
+}
+
+h4{
+    
     margin-bottom: 5px;
     font-size: small;
 }
@@ -42,6 +46,5 @@ ul li{
 
 #precio{
     text-align: end;
-    font-weight: bold;
     font-size: small;
 }
